[package]
name = "turnkeeper"
version = "1.0.0"
edition = "2021"
description = "An asynchronous, recurring job scheduler for Tokio with cron-like (weekday/time) scheduling, retries, observability and flexible backends."

authors = ["Excerion Sun <dev@excsn.com>", "Norm O <normo.pub@gmail.com>"]
readme = "README.md"
repository = "https://github.com/excsn/turnkeeper"
homepage = "https://github.com/excsn/turnkeeper"
license = "MPL-2.0"
keywords = ["scheduler", "job", "cron", "recurring", "task"]
categories = ["asynchronous", "concurrency", "date-and-time", "network-programming", "web-programming"]

[dependencies]
async-channel = "^2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
priority-queue = "^2"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
uuid = { version = "^1", features = ["v4", "serde"] }

# Optional, for easy setup in examples/tests
tracing-subscriber = { version = "^0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
anyhow = "^1.0"

[features]
default = []
serde = ["dep:serde", "chrono/serde", "uuid/serde"]

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1