[package]
name = "turnkeeper"
version = "1.2.5"
edition = "2021"
description = "An asynchronous, recurring job scheduler for Tokio with support for CRON, interval, and weekday/time schedules, plus retries, cancellation, and observability."

authors = ["Excerion Sun <dev@excsn.com>", "Norm O <normo.pub@gmail.com>"]
readme = "README.md"
repository = "https://github.com/excsn/turnkeeper"
homepage = "https://github.com/excsn/turnkeeper"
license = "MPL-2.0"
keywords = ["scheduler", "job", "cron", "recurring", "task"]
categories = ["asynchronous", "concurrency", "date-and-time", "network-programming", "web-programming"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
cron = { version = "^0.12", optional = true }
fibre = "^0.5"
futures = "^0.3"
parking_lot = "^0.12"
priority-queue = { version = "^2.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
uuid = { version = "^1.18", features = ["v4", "serde"] }

# Optional, for easy setup in examples/tests
tracing-subscriber = { version = "^0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
anyhow = "^1.0"

[features]
full = ["default", "cron_schedule", "serde"]
default = ["job_context", "priority_queue_handle_based"]
serde = ["dep:serde", "chrono/serde", "uuid/serde"]

# Enables task-local based JobContext for job execution functions
job_context = []
priority_queue_handle_based = ["dep:priority-queue"] 
cron_schedule = ["dep:cron"]

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

[[example]]
name = "cron_schedule"
required-features = ["cron_schedule"]